# raspicam

./: .all-contributorsrc  .env.example  .gitignore  BumpTest.py  Camera.py  CameraVel.py  Camera_Test_Script_Model_A.py  Dockerfile  LSM9DS0.py  LSM9DS1.py  Pi2Pi_init.sh  Pipfile  README.md  backend.py  berryIMU.py  berryIMU_LSM9DS0.py  berryIMU_LSM9DS1.py  bump_testing.py  camera_error_handler.py  canvas.py  config.json  config.py  convert.sh  data.py  entrypoint.sh  heynico.txt  i2c.py  initmac2pi.sh  optional-requirements.txt  orchestrator.py  overlay.py  overlay_all_stats.py  overlay_blank.py  overlay_error.py  overlay_error_test.py  overlay_new.py  overlay_top_strip.py  pi_stretch_motion_4.1.1-1_armhf.deb  pyproject.toml  renderer.py  (+12 more)
Camera/: Camera.py  CameraV2.py  CameraVel.py  convert.sh  plot.py  run.py
CameraOverlay/: .env  CameraTime.py  OrchestratorClass.py  Overlay_Demo.py  Overlay_Demo2.py  StartCamera.py  commons.py  config.py  configs.json  configs.py  data.py  mqtt-test.py  mqtt_message_test.py  mqtt_pub_test.py  orchestrator.py  overlay.py  overlay_all_stats.py  overlay_blank.py  overlay_top_strip.py  research_and_development.py  speed_attempt_static_overlay.py  switch_demo.py  topics.py
Data/: AboutMe  Data on 01-12-2017 at 01:16:12.txt  Data on 01-12-2017 at 01:36:12.txt  Data on 01-12-2017 at 01:47:50.txt  Data on 01-12-2017 at 01:48:00.txt  Data on 01-12-2017 at 01:49:52.txt  Data on 01-12-2017 at 01:51:08.txt  Data on 01-12-2017 at 01:55:12.txt  Data on 01-12-2017 at 02:56:15.txt  Data on 01-12-2017 at 14:56:43.txt  Data on 01-12-2017 at 16:03:37.txt  Data on 30-11-2017 at 10:11:39.txt  Data on 30-11-2017 at 10:25:00.txt
Datasheets/: LSM9DS0.pdf.REMOVED.git-id  LSM9DS1.pdf.REMOVED.git-id
Development_Code/: Camera_Test_Script_Model_A.py  Overlay_Demo.py
Documentation/: ReadMe.txt
GPS/: GPSIMU.py  berryIMU2.py  date +"%Y%m%d-%H-%M-%S".nmea  gps_data.nmea
Hall_Effect/: ReedSwitch.py  hall_effect  hall_effect.c
IMU/: BumpTest.py  IMU.py  berryIMU.py  berryIMU2.py  i2c.py
Legacy/: CameraVel.py  run.py
MQTT/: simple_pub.py  sub_getting_started.py
Matlab/: CdAf.m  P_air.m  Run_Comparison_17_9_26_12_34.m  Run_Data_Import_17_4_16.m  Run_Estimator_var_mass.m
Other_Code/: Camera.py
ReedSwitch/: Recording_0.csv  Recording_1.csv  Recording_2.csv  Recording_3.csv
Remote Activation/: receive.py
Shell_Scripts/: initmac2pi.sh  initpi2pi.sh  sshv1.sh  sshv2.sh
Velocity/: ReadMe.txt  speed.csv  velocity  velocity.c
Video/: AboutMe  Recording_0.h264  Recording_1.h264  Recording_1.h264.REMOVED.git-id  Recording_2.h264  Recording_3.h264
backend/: __init__.py  backend.py  backend_factory.py  (+3 more)
(+281 files in other folders)
